[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymd-frontmatter"
description = "A FrontMatter parser/extractor for python-markdown"
version = "0.0.27"
dependencies = [
    "Markdown>=3.4.1",
    "PyYAML>=6.0"
]

[project.entry-points."markdown.extensions"]
frontmatter = "pymd_frontmatter:FrontMatterExtension"

